Moved 2 classes back to fix; more refactor/accuracy concerns

--- a/dll_util/Makefile
+++ b/dll_util/Makefile
@@ -14,7 +14,7 @@ compile:
 	$(HAXE) build.hxml
 
 luac:
-	$(LUAC) -o $(TARGET).blua $(BUILD_DIR)/*.lua
+	$(LUAC) -s -o $(TARGET).blua $(BUILD_DIR)/*.lua
 
 clean:
 	rm -rf $(BUILD_DIR) $(TARGET).blua
