[dll_util] fix all names and the file hierarchy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "files.associations": {
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "string": "cpp",
+        "*.tcc": "cpp",
+        "unordered_map": "cpp",
+        "string_view": "cpp",
+        "compare": "cpp",
+        "cstdint": "cpp",
+        "chrono": "cpp"
     }
 }
